--- a/main.html
+++ b/main.html
@@ -10,6 +10,39 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post" action="mailto:pravinshivajipatil37@gmail.com">
+		<label for="name">Name *</label>
+		<input type="text" id="name" name="text " required><br><br>
+
+		<label for="email">Email *</label>
+		<input type="email" id="email" name="email " required><br><br>
+
+		Gender *
+		<input type="radio" name="gender " required> Male 
+		<input type="radio" name="gender " required> Female <br><br>
+
+		<label for="laptop">Laptop Brands : </label>
+		<select id="laptop" name="Laptop Brands " required>
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select><br><br>
+
+		<label for="age">Age * </label>
+		<input type="number" id="age" name="Age " required><br><br>
+
+		<label for="dob">Date of Birth * </label>
+		<input type="date " id="dob" name="dob " required><br><br>
+
+		<label for="password">Password *</label>
+		<input type="password" id="password" name="passwrod " required><br><br>
+
+		<label for="portfolio">Portfolio URL </label>
+		<input type="url" id="portfolio" name="portfolio "><br><br>
+
+		<button type="submit">Submit</button>
+		
+	</form>
 
 </body>
 
